--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "react-likey",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.tsx",
-  "types": "src/index.d.ts",
+  "main": "./src/index.tsx",
+  "typings": "./src/index.d.ts",
   "scripts": {
     "build": "webpack build --config ./webpack.config.js",
     "start": "webpack serve",
-    "test": "jest --env=jsdom --watchAll"
+    "test": "jest --env=jsdom --watchAll",
+    "test:state": "jest state --env=node --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jotai": "^1.3.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "tsconfig": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
