--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es5",
+      "target": "es6",
       "lib": [
         "dom",
         "dom.iterable",
@@ -20,10 +20,13 @@
       "isolatedModules": true,
       "noEmit": true,
       "jsx": "react-jsx",
-      "outDir": "dist",
+      "outDir": "./dist",
     },    
     "include": [
-      "src"
+      "src/**/*.js",
+      "src/**/*.jsx",
+      "src/**/*.ts",
+      "src/**/*.tsx"
     ],
     "exclude": [
       "node_modules",
