--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "webpack serve",
     "test": "jest --env=jsdom --watchAll",
     "test:state": "jest state --env=node --watch",
-    "ci": "cypress install"
+    "ci": "cypress install",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
     "react-router-dom": "^5.3.0",
+    "react-spring-bottom-sheet": "^3.4.0",
     "tsconfig": "^7.0.0"
   },
   "devDependencies": {
