--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
+    "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.3.0",
     "react-spring-bottom-sheet": "^3.4.0",
     "tsconfig": "^7.0.0"
