--- a/package.json
+++ b/package.json
@@ -37,16 +37,22 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
+    "autoprefixer": "^10.4.0",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.5.1",
+    "cypress": "^8.6.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "jest-dom": "^4.0.0",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
     "react-test-renderer": "^17.0.2",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "cypress": "^8.6.0"
+    "webpack-dev-server": "^4.0.0"
   }
 }
