--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fastify": "^3.24.0",
     "jotai": "^1.3.9",
+    "open-graph-scraper": "^4.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
     "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.3.0",
     "react-spring-bottom-sheet": "^3.4.0",
+    "ts-open-graph-scraper": "0.0.2",
     "tsconfig": "^7.0.0"
   },
   "devDependencies": {
@@ -33,7 +36,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.2",
+    "@types/node": "^16.11.7",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
