--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "webpack serve",
     "test": "jest --env=jsdom --watchAll",
     "test:state": "jest state --env=node --watch",
+    "start:api": "node src/ogApiServer.js",
     "ci": "cypress install",
     "cypress:open": "cypress open"
   },
@@ -17,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^3.24.0",
+    "fastify-cors": "^6.0.2",
     "jotai": "^1.3.9",
     "open-graph-scraper": "^4.11.0",
     "react": "^17.0.2",
