--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@karrotframe/tabs": "^0.4.2",
     "fastify": "^3.24.0",
     "fastify-cors": "^6.0.2",
     "jotai": "^1.3.9",
