--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^5.3.0",
     "react-spring-bottom-sheet": "^3.4.0",
     "ts-open-graph-scraper": "0.0.2",
-    "tsconfig": "^7.0.0"
+    "tsconfig": "^7.0.0",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -48,6 +49,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.5.1",
     "cypress": "^8.6.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "jest-dom": "^4.0.0",
