--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@karrotframe/navigator": "^0.18.0",
     "@karrotframe/tabs": "^0.4.2",
     "fastify": "^3.24.0",
