--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,49 @@
-node_modules
-__snapshots__
-coverage
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+.next
+.idea
+
+
+#If you're using Zero-Installs:
+# .yarn/*
+# !.yarn/cache
+# !.yarn/patches
+# !.yarn/plugins
+# !.yarn/releases
+# !.yarn/sdks
+# !.yarn/versions
+
+#If you're not using Zero-Installs:
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
