--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@karrotframe/navigator": "^0.18.0",
     "@karrotframe/tabs": "^0.4.2",
+    "@types/expect-puppeteer": "^4.4.7",
+    "expect-puppeteer": "^6.0.2",
     "fastify": "^3.24.0",
     "fastify-cors": "^6.0.2",
+    "jest-environment-puppeteer": "^6.0.3",
     "jotai": "^1.3.9",
     "open-graph-scraper": "^4.11.0",
+    "puppeteer": "npm:12.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
     "react-hot-toast": "^2.1.1",
     "react-router-dom": "^5.3.0",
     "react-spring-bottom-sheet": "^3.4.0",
+    "trackpurchase": "^0.1.14",
     "ts-open-graph-scraper": "0.0.2",
     "tsconfig": "^7.0.0",
     "uninstall": "0.0.0"
@@ -41,14 +46,18 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.0",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.2",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.9",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.1",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.2",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.5.1",
@@ -57,14 +66,15 @@
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "jest-dom": "^4.0.0",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.5",
     "postcss-loader": "^6.2.0",
     "react-test-renderer": "^17.0.2",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.0",
-    "typescript": "^4.3.5",
+    "tailwindcss": "^3.0.15",
+    "typescript": "^4.5.4",
     "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.0.0"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
