--- a/package.json
+++ b/package.json
@@ -20,61 +20,69 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@karrotframe/navigator": "^0.18.0",
+    "@karrotframe/navigator": "^0.19.0",
     "@karrotframe/tabs": "^0.4.2",
     "@types/expect-puppeteer": "^4.4.7",
+    "@types/puppeteer": "^5.4.4",
     "expect-puppeteer": "^6.0.2",
-    "fastify": "^3.24.0",
+    "fastify": "^3.27.0",
     "fastify-cors": "^6.0.2",
     "jest-environment-puppeteer": "^6.0.3",
-    "jotai": "^1.3.9",
+    "jotai": "^1.5.3",
     "open-graph-scraper": "^4.11.0",
-    "puppeteer": "npm:12.0.1",
+    "puppeteer": "12.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.17.2",
-    "react-hot-toast": "^2.1.1",
-    "react-router-dom": "^5.3.0",
+    "react-hook-form": "^7.25.1",
+    "react-hot-toast": "^2.2.0",
+    "react-router-dom": "^6.2.1",
     "react-spring-bottom-sheet": "^3.4.0",
-    "trackpurchase": "^0.1.14",
+    "rxjs": "^7.5.2",
+    "trackpurchase": "^1.1.0",
     "ts-open-graph-scraper": "0.0.2",
     "tsconfig": "^7.0.0",
     "uninstall": "0.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.0",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.9",
-    "@types/react": "^17.0.38",
+    "@types/node": "^17.0.12",
+    "@types/react": "17.0.27",
     "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.2",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "^8.2.2",
+    "babel-jest": "^27.4.6",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
-    "cypress": "^8.6.0",
+    "cypress": "^8.7.0",
+    "eslint": "^8.7.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.0.6",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.7",
     "jest-dom": "^4.0.0",
     "postcss": "^8.4.5",
-    "postcss-loader": "^6.2.0",
+    "postcss-loader": "^6.2.1",
+    "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.15",
-    "typescript": "^4.5.4",
-    "webpack": "^5.51.1",
+    "tailwindcss": "^3.0.17",
+    "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.7.3"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "dependenciesMeta": {
+    "puppeteer@12.0.1": {
+      "unplugged": true
+    }
+  }
 }
