--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2021",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es2020",
+    // "lib": ["dom", "dom.iterable", "esnext"],
+    // "typeRoots": ["./.pnp.cjs", "@types", "global.d.ts"],
     "typeRoots": ["./node_modules/@types", "@types", "global.d.ts"],
     "baseUrl": "src",
     "allowJs": true,
